# demo-jupyter-book

./: _config.yml  build.sh  build_netlify.sh  export_dependencies_requirements.sh  pyproject.toml  rebuild.sh  requirements.txt
