[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Miguel Negrao <miguel.negrao@friendlyvirus.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.4.post1"
matplotlib = "^3.10.3"
numpy = "^2.2.5"
jupytext = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
